<resources>
    <string name="app_name">VeryWowChat</string>
    <string name="login_header">Login</string>
    <string name="login_field_username">User name</string>
    <string name="login_field_password">Password</string>
    <string name="login_button_content">Login</string>
    <string name="login_register_button_content">Register</string>
    <string name="register_header">Register</string>
    <string name="register_field_displayname">Display Name</string>
    <string name="register_field_username">User name</string>
    <string name="register_field_email">Email</string>
    <string name="register_field_password">Password</string>
    <string name="register_field_password_reapet">Repeat Password</string>
    <string name="register_button_submit">Register</string>
    <string name="chatroom_name">Chatroom Name</string>
    <string name="chatroom_create">Create Chatroom</string>
    <string name="chatroom_update">Update Chatroom</string>
    <string name="chatroom_display_name">Display Name</string>
    <string name="chatroom_description">Description</string>
    <string name="chatroom_tags">Tags</string>
    <string name="chatroom_listed">Listed</string>
    <string name="chatroom_invited_only">Private</string>
    <string name="chatroom_invite">Chatroom Invite</string>
    <string name="chatroom_admin_invite">Administrator Invite</string>
    <string name="invite_admin_member">Invite Administrator</string>
    <string name="username">Username</string>
    <string name="chatroom_Actvity_SendButton_content">SEND</string>
    <string name="chatroomMSG_Actvity_text">Enter Message</string>
    <string name="chatroomMSG_Actvity_sendBTN">Submit Text Message</string>
    <string name="my_chatrooms">My Chatrooms</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="tab_text_1">My Friends</string>
    <string name="tab_text_2">My Chats</string>
    <string name="tab_text_3">Public Chats</string>
    <string name="btnlogoutuser_text">Log Out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_user_home_page">UserHomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="join_chatroom">Join Chatroom</string>
    <string name="leave_chatroom">Leave Chatroom</string>
    <string name="invite_member">Invite Member</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="member_invites">Member Invites</string>
    <string name="admin_invites">Admin Invites</string>
    <string name="manage_invites">Manage Invites and Requests</string>

    <string name="account_setting_header">Account Settings</string>
    <string name="account_setting_display_label">Display Name</string>
    <string name="account_setting_display_header">Change Display Name</string>
    <string name="account_setting_password_header">Change Password</string>
    <string name="account_setting_password_label">Password</string>
    <string name="account_setting_password_repeat_label">Repeat Password</string>
    <string name="account_setting_email_header">Change Email</string>
    <string name="account_setting_email_labl">Email</string>
    <string name="account_setting_save_buttun_label">Save Changes</string>
    <string name="account_setting_delete_buttun_label">Delete My Account</string>
    <string name="channel_name">New Chat Notification</string>
    <string name="channel_description">Displays the new chat notifications in the very wow chat app</string>
    <string name="friend_list_item_text_view_content">Placeholder for username</string>

    <string name="invite_accept">Accept</string>
    <string name="invite_reject">Reject</string>
    <string name="account_settings">Account Settings</string>
    <string name="create_new_chatroom">Create New Chatroom</string>
    <string name="view_pending_requests">View Pending Requests</string>
    <string name="add_friend">Add Friend</string>
</resources>
